name: "3 - Single Filter Application Flow"
appId: "com.recipedia"
tags:
  - search-filters
---
- tapOn:
    id: "BottomTabs::Search"
    label: "Action - Navigate to Search screen"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Open the filter page"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      id: "SearchScreen::FilterAccordion::Accordion::5"
    direction: DOWN
    centerElement: true
    label: "Action - Scroll to Cereal accordion"

- waitForAnimationToEnd

- tapOn:
    id: "SearchScreen::FilterAccordion::Accordion::5"
    label: "Action - Expand Cereal accordion"

- waitForAnimationToEnd

- scrollUntilVisible:
    element:
      text: ".*Spaghetti"
    direction: DOWN
    centerElement: true
    label: "Action - Scroll to Spaghetti item"

- waitForAnimationToEnd

- tapOn:
    text: ".*Spaghetti"
    label: "Action - Select Spaghetti as filter"

- runFlow:
    file: "../../flows/search/scrollBackToTop.yaml"
    label: "Scroll back to top of search screen"

- runFlow:
    file: "../../asserts/search/en/filters/filtersViewFilteredOnSpaghetti.yaml"
    label: "Assert - Verify filter view with Spaghetti selected"

- tapOn:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Action - Remove Spaghetti filter by tapping on chip"

- assertNotVisible:
    id: "SearchScreen::FiltersSelection::0::Chip"
    label: "Assert - Verify Spaghetti filter chip is no longer visible"

- assertNotVisible:
    text: "Spaghetti"
    label: "Assert - Verify Spaghetti filter text is no longer visible"

- tapOn:
    id: "SearchScreen::FiltersToggleButtons"
    label: "Action - Close the filter page"
